Mon Nov  2 13:45:05 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/RW_Process_Mutex.h:
        * ace/Default_Constants.h:
          Added ACE_DEFAULT_RW_PROCESS_MUTEX_PERMS with which the end user
          can override the default permissions

        * ace/Addr.inl:
        * ace/MMAP_Memory_Pool.cpp:
          Doxygen changes

Mon Nov  2 08:52:05 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          Enhanced strsignal test to test with negative signal numbers.

Mon Nov  2 08:40:08 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/run_test.lst:
          Run Signal_Test on FreeBSD.

Mon Nov  2 08:36:24 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Sig_Handler.cpp:
          Removed setting of SA_SIGINFO flag. It should not be used
          with POSIX.1 signal handler (sa_handler).

Sun Nov  1 16:47:29 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/Sig_Handler.cpp:
          LynxOS 4.x supports SA_SIGINFO.

Fri Oct 30 18:46:03 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * include/makeinclude/wrapper_macros.GNU:

          Added -DNDEBUG to CPPFLAGS when debug=0 is set.

Thu Oct 29 21:45:30 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_pwd.h:
        * ace/OS_NS_time.inl:
        * ace/README:
        * ace/config-mvs.h:
        * ace/config-tru64.h:
        * ace/os_include/os_time.h:
        * configure.ac:
        * m4/config_h.m4:
          Removed references to ACE_HAS_BROKEN_CTIME and
          ACE_HAS_BROKEN_R_ROUTINES.

Thu Oct 29 21:25:49 UTC 2009  Chris Cleeland  <cleeland@ociweb.com>

        * tests/Message_Queue_Test.cpp:

          Reverted change from Tue Oct 27 08:12:25 UTC 2009
          William R. Otte  <wotte@dre.vanderbilt.edu>.  The change
          was causing core dumps on some platforms due to treating
          the thread ID as a pointer and dereferencing that pointer.
          Better to live with compiler warnings than crashes.
